// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TopBar No Token 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cx3lwj-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar One Cluster 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cx3lwj-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-1jcv3fz-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Processor Action 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cx3lwj-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
      <p>
        meow
      </p>
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Token 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cx3lwj-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      />
    </div>
  </nav>
</div>
`;

exports[`Storyshots TopBar Two Cluster 1`] = `
<div>
  <nav
    aria-label="Appbar Tools"
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation1 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appbar mui-fixed css-xx4di6-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular makeStyles-toolbar css-hyum1k-MuiToolbar-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1cx3lwj-MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 auto 32"
      >
        logo-dark.svg
      </svg>
      <div
        class="makeStyles-grow"
      />
      <div
        class="makeStyles-clusterTitle"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorPrimary css-tsm8af-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="css-k5l2zq"
            title="ak8s-desktop"
          >
            Cluster: ak8s-desktop
          </span>
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
      <button
        aria-controls="primary-user-menu"
        aria-haspopup="true"
        aria-label="Account of current user"
        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeMedium css-1jcv3fz-MuiButtonBase-root-MuiIconButton-root"
        tabindex="0"
        type="button"
      >
        <span />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </button>
    </div>
  </nav>
</div>
`;
